--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # =============== #
 # Unity generated #
 # =============== #
-[Tt]emp/
-[Oo]bj/
-[Bb]uild
-/[Bb]uilds/
-/[Ll]ibrary/
-sysinfo.txt
-*.stackdump
-/Assets/AssetStoreTools*
-*.apk
-*.unitypackage
+FirstGame/[Tt]emp/
+FirstGame/[Oo]bj/
+FirstGame/[Bb]uild
+FirstGame//[Bb]uilds/
+FirstGame//[Ll]ibrary/
+FirstGame/sysinfo.txt
+FirstGame/*.stackdump
+FirstGame//Assets/AssetStoreTools*
+FirstGame/*.apk
+FirstGame/*.unitypackage
  
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
