--- a/FirstGame/Assembly-CSharp.csproj
+++ b/FirstGame/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
      <Compile Include="Assets\_scripts\CameraController.cs" />
      <Compile Include="Assets\_scripts\CameraControllerAdvanced.cs" />
+     <Compile Include="Assets\_scripts\MovingPlatform.cs" />
      <Compile Include="Assets\_scripts\pickUpController.cs" />
      <Compile Include="Assets\_scripts\PlayerController.cs" />
      <Compile Include="Assets\_scripts\PlayerControllerAdvanced.cs" />
