--- a/FirstGame/Assembly-CSharp.csproj
+++ b/FirstGame/Assembly-CSharp.csproj
@@ -53,7 +53,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\_scripts\BeeAnimationScript.cs" />
+     <Compile Include="Assets\_scripts\BeeAnimationController.cs" />
+     <Compile Include="Assets\_scripts\BeeController.cs" />
      <Compile Include="Assets\_scripts\CameraController.cs" />
      <Compile Include="Assets\_scripts\CameraControllerAdvanced.cs" />
      <Compile Include="Assets\_scripts\MovingPlatform.cs" />
