--- a/FirstGame/Assembly-CSharp.csproj
+++ b/FirstGame/Assembly-CSharp.csproj
@@ -61,6 +61,11 @@
      <Compile Include="Assets\_scripts\CameraController.cs" />
      <Compile Include="Assets\_scripts\CameraControllerAdvanced.cs" />
      <Compile Include="Assets\_scripts\CheckpointController.cs" />
+     <Compile Include="Assets\_scripts\hex\BattleScript.cs" />
+     <Compile Include="Assets\_scripts\hex\characterScript.cs" />
+     <Compile Include="Assets\_scripts\hex\hexMapScript.cs" />
+     <Compile Include="Assets\_scripts\hex\HexMapUtil.cs" />
+     <Compile Include="Assets\_scripts\hex\hexScript.cs" />
      <Compile Include="Assets\_scripts\MovingPlatform.cs" />
      <Compile Include="Assets\_scripts\pickUpController.cs" />
      <Compile Include="Assets\_scripts\PlayerController.cs" />
